@@ -1,3 +1,7 @@
+2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b344
+
+	* Fix 1079796: Rebuild thumbnails reloads wrong page
+
 2005-02-13  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b343
 
 	* Fix 1082661: New user email not being sent
